Terminado trabajo ACPD

--- a/3 GII/2do Semestre/Arquitectura de Computadores Paralelos y Distribuidos/Trabajo final/AWS vs Azure/Memoria/AWS vs Azure.tex
+++ b/3 GII/2do Semestre/Arquitectura de Computadores Paralelos y Distribuidos/Trabajo final/AWS vs Azure/Memoria/AWS vs Azure.tex
@@ -109,7 +109,15 @@
 	\maketitle
 	
 %	\thispagestyle{empty}
-	\newpage
+	\newpage{\pagestyle{empty}\cleardoublepage}
+	
+	\vspace*{\fill}
+	La computación en la nube está a la orden del día, debido al abaratamieto de costes y la facilidad del escalado de los recursos empleados.
+	
+	Vamos a comparar las dos principales plataformas, Amazon Web Services y Microsoft Azure en términos centrados a la utilización de los recursos por dispositivos del Internet de las Cosas, muy relacionado con la computación en la nube.
+	
+	Primeramente comprobaremos como lanzar una máquina virtual en ambos servicios, útil para realizar los diversos cálculos que utiliza el sistema, posteriormente veremos como crear sitios o servicios web de cara a poder ser utilizados por los dispositivos para transmitir información y por último arrancaremos brokers de mensajería para la comunicación dispositivo-servidor.
+	\vspace*{\fill}
 	
 	\tableofcontents
 	\newpage
