--- a/3 GII/2do Semestre/Arquitectura de Computadores Paralelos y Distribuidos/Trabajo final/AWS vs Azure/Memoria/Anexo/Anexo.tex
+++ b/3 GII/2do Semestre/Arquitectura de Computadores Paralelos y Distribuidos/Trabajo final/AWS vs Azure/Memoria/Anexo/Anexo.tex
@@ -1,5 +1,5 @@
 \chapter{Referencias}
-En este capítulo se detallarán las referencias consultadas a la hora de redactar este documento.
+En este capítulo se detallarán las referencias consultadas a la hora de redactar este documento:
 \begin{itemize}
 	\item Documentación oficial de AWS: \url{https://aws.amazon.com/es/}.
 	\item Documentación oficial de Azure: \url{https://azure.microsoft.com/es-es/}.
@@ -8,4 +8,6 @@ En este capítulo se detallarán las referencias consultadas a la hora de redact
 	\item \url{https://revistadigital.inesem.es/informatica-y-tics/cloud-computing-con-amazon/}.
 	\item \url{https://docs.aws.amazon.com/es_es/general/latest/gr/aws_service_limits.html}.
 	\item \url{https://azure.microsoft.com/es-es/free/free-account-students-faq/}.
+	\item \url{https://es.wikipedia.org/wiki/Microsoft_Azure}
+	\item \url{https://docs.microsoft.com/es-es/azure/iot-hub/quickstart-send-telemetry-dotnet}
 \end{itemize}
