--- a/3 GII/2do Semestre/Arquitectura de Computadores Paralelos y Distribuidos/Trabajo final/AWS vs Azure/Memoria/Conceptos/CaracteristicasAWS.tex
+++ b/3 GII/2do Semestre/Arquitectura de Computadores Paralelos y Distribuidos/Trabajo final/AWS vs Azure/Memoria/Conceptos/CaracteristicasAWS.tex
@@ -32,7 +32,7 @@ En cuanto al resto de servicios, AWS ofrece todo tipo de herramientas y aplicaci
 Dentro de la capa de estudiantes\footnote{La que hemos podido probar gracias al acuerdo de la UCA con Amazon.} tenemos las siguientes limitaciones (entre muchas más):
 \begin{itemize}
 	\item \textbf{Amazon EC2:} Tiene límites tanto sobre el tipo de instancia que puede utilizar como la cantidad de horas que puede utilizar en un mes.
-	\item \textbf{Amazon S3:} Tiene un límite en la cantidad de almacenamiento que puede utilizar y sobre la frecuencia con al que puede llamara a determinadas operaciones cada mes.
+	\item \textbf{Amazon S3:} Tiene un límite en la cantidad de almacenamiento que puede utilizar y sobre la frecuencia con al que puede llamar a determinadas operaciones cada mes.
 	\item \textbf{Amazon RDS:} Tiene un límite de 750 horas al mes durante los primeros 12 meses tanto para linux como para windows en cualquier combinación de instancias. Encender una máquina una vez, hará que cuente como una hora, por lo que es más recomendable iniciarla durante 3 horas (contabilizará 3 horas), que iniciarla 3 veces en una hora (también contabilizará 3 horas).
 \end{itemize}
 
