--- a/3 GII/2do Semestre/Arquitectura de Computadores Paralelos y Distribuidos/Trabajo final/AWS vs Azure/Memoria/Introduccion/Azure.tex
+++ b/3 GII/2do Semestre/Arquitectura de Computadores Paralelos y Distribuidos/Trabajo final/AWS vs Azure/Memoria/Introduccion/Azure.tex
@@ -1,12 +1,21 @@
 \chapter{Azure}
 \hypertarget{azure}{}
 \section{¿Qué es Azure?}
-
-
-Compite con \hyperlink{AWS}{Amazon Web Services}.
+Compite directamente con \hyperlink{AWS}{Amazon Web Services}. Es un conjunto de servicios de computación en la nube, lanzado por Microsoft. Tiene un gran número de servicios, y la posibilidad de usar tanto Windows como Linux en sus máquinas, haciéndolo compatible con aquellas empresas que requieran ambos sistemas en sus infraestructuras. Al igual que AWS, usa un modelo de pago por uso de los recursos.
 
 \section{Historia}
-%Historia y por qué surge.
+Azure se lanza oficialmente en 2008 en el Professional Developers Conference de Los Ángeles, y se lanzó como beta. No fue hasta 2010 cuando pasó a ser un producto comercial.
+
+Durante esta versión Beta que duró casi 2 años, se ofrecieron unos primeros servicios tales como SQL Database Relational, PHP, Java, etc. Posteriormente, ya en versión comercial, se han ido incluyendo características como máquinas virtuales, mejoras en SQL, escalados automáticos, Python, etc.
 
 \section{Descripción}
-%Poner una descripción muyy genérica de Azure. Las características son en la parte 2 junto con las limitaciones.
+Dentro de Azure podemos destacar los siguientes puntos:
+\begin{itemize}
+	\item \textbf{Proceso:} El servicio de proceso de Windows Azure ejecuta aplicaciones basadas en Windows Server. Estas aplicaciones se pueden crear mediante .NET Framework en lenguajes como C\# y Visual Basic, o implementar sin .NET en C++, Java y otros lenguajes.	
+	\item \textbf{Almacenamiento:} Ojetos binarios grandes (blobs) proporcionan colas para la comunicaciónO entre los componentes de las aplicaciones de Windows Azure y ofrece un tipo de tablas con un lenguaje de consulta simple.
+	\item \textbf{Servicios de infraestructura:} Posibilidad de desplegar de una forma sencilla máquinas virtuales con Windows Server o con distribuciones de Linux.	
+	\item \textbf{Controlador de tejido:} Windows Azure se ejecuta en un gran número de máquinas. El trabajo del controlador de tejido es combinar las máquinas en un solo centro de datos de Windows Azure formando un conjunto armónico. Los servicios de proceso y almacenamiento de Windows Azure se implementan encima de toda esta eficacia de procesamiento.	
+	\item \textbf{Red de entrega de contenido (CDN):} El almacenamiento en caché de los datos a los que se accede frecuentemente cerca de sus usuarios agiliza el acceso a esos datos.	
+	\item \textbf{Connect:} Diferentes organizaciones interactúan con aplicaciones en la nube como si estuvieran dentro del propio firewall de la organización.	
+	\item \textbf{Administración de identidad y acceso:} La solución Active Directory permite gestionar de forma centralizada y sencilla el control de acceso y la identidad. Esta solución es perfecta para la administración de cuentas y la sincronización con directorios locales.
+\end{itemize}
