Terminada presentación ACPD

--- a/3 GII/2do Semestre/Arquitectura de Computadores Paralelos y Distribuidos/Trabajo final/AWS vs Azure/Presentación/AWS vs Azure.tex
+++ b/3 GII/2do Semestre/Arquitectura de Computadores Paralelos y Distribuidos/Trabajo final/AWS vs Azure/Presentación/AWS vs Azure.tex
@@ -300,9 +300,9 @@ Sisic Dino}
 \begin{frame}{Creación de webs en AWS}
 	\begin{figure}[h]
 		\centering
-		\includegraphics[scale=0.17]{web_aws/.png}
-		\caption{ AWS.}
-		\label{}
+		\includegraphics[scale=0.39]{AWS/Web/error_aws.png}
+		\caption{Error en la creación de aplicación web de AWS.}
+		\label{Error AWS}
 	\end{figure}
 \end{frame}
 
@@ -310,10 +310,19 @@ Sisic Dino}
 \begin{frame}{Creación de webs en Azure}
 	\begin{figure}[h]
 		\centering
-		\includegraphics[scale=0.17]{web_azure/.png}
-		\caption{ Azure.}
-		\label{}
+		\includegraphics[scale=0.55]{web_azure/centro.png}
+		\caption{Centro de aplicaciones web de Azure.}
+		\label{Centro de aplicaciones web de Azure}
 	\end{figure}
+\end{frame}
+
+\begin{frame}{Creación de webs en Azure}
+\begin{figure}[h]
+	\centering
+	\includegraphics[scale=0.3]{web_azure/web1.png}
+	\caption{Ejemplo de web.}
+	\label{Ejemplo de web}
+\end{figure}
 \end{frame}
 
 \subsection{Creación de servicios IoT}
